# vmuxIO

./: .envrc  .gitignore  .gitmodules  DESIGN.md  Makefile  README.md  autotest.cfg  flake.nix  garnix.yaml  ioctl.bt  justfile  meson.build  meson_options.txt  tests.cfg  trace.bt  trace2.bt  vmux-nixbuild
.github/workflows/: build.yml  upgrade-flakes.yml
.vim/: coc-settings.json
design/: clang-uml.yml  sim_e810.mmd
docs/: README.md  clang-uml.yml  configs.md  sim_e810.mmd  test_setups.md  vmux.mmd  vmux_part1.mmd  vmux_simbricks.mmd
hosts/: amy.yaml  apply.py  christina.yaml  christina_autotest.yaml  graham.yaml  graham2.yaml  host.yaml  jackson.yaml  prepare.py  river.yaml  rose.yaml  ryan.yaml  wilfred.yaml
nix/: 0001-ixgbe-vmux-capa.patch  0001-qemu-dma_read.patch  0001-qemu-hva2gpa.patch  0001-qemu-libvfio-user-no-dma.patch  0002-qemu-libvfio-user-no-dma.patch  admin-macs.json  desperately-fixing-overlayfs-for-extkern.nix  docker.nix  dpdk-new-meson.patch  dpdk-vdpdk.nix  dpdk.nix  dpdk23.nix  dpdk23.queue-limits.patch  dpdkdk.nix  dpvs.conf.single-nic.sample  dpvs.nix  extkern.nix  fastclick.dpdk23.patch  fastclick.mempool-size.patch  fastclick.nix  fastclick.per-thread-counter.patch  gpio.nix  guest-config.nix  host-config.nix  kmod-tools.nix  libmoon-lachnit-fix-build.patch  make-disk-image.nix  moongen-lachnit.nix  moongen.nix  moongen21.nix  networking.nix  nic-emu.nix  nixos-config-extkern.nix  nixos-extkern-image.nix  nixos-generators-qcow.nix  nixos-image.nix  pktgen.nix  print.patch  qemu-libvfio.nix  qemu8-libvfio-sock.patch  (+5 more)
src/: caps.cpp  caps.hpp  device.hpp  eventfd.cpp  eventfd.hpp  main.c  main.cpp  memfd.cpp  memfd.hpp  meson.build  runner.cpp  runner.hpp  rx-thread.hpp  tap.hpp  util.cpp  util.hpp  vfio-consumer.c  vfio-consumer.cpp  vfio-consumer.h  vfio-consumer.hpp  vfio-server.hpp
src/devices/: e1000.hpp  e810.hpp  passthrough.hpp  vdpdk-consts.hpp  vdpdk.cpp  vdpdk.hpp  vmux-device.hpp
src/drivers/: dpdk.hpp  driver.hpp  flow_blocks.hpp  tap.hpp
src/interrupts/: accurate.hpp  global.cpp  global.hpp  interface.hpp  none.hpp  qemu.hpp  simbricks.hpp
src/libsimbricks/simbricks/base/: generic.h  if.c  if.h
src/libsimbricks/simbricks/network/: if.c  if.h  proto.h
src/libsimbricks/simbricks/nicbm/: multinic.cc  multinic.h  nic-emu-example.h  nicbm.cc  nicbm.h  nicemu.cpp  nicemu.hpp
src/libsimbricks/simbricks/nicif/: nicif.c  nicif.h  rules.mk
src/libsimbricks/simbricks/pcie/: if.c  if.h  proto.h
src/policies/: policies.hpp  ptp.hpp
src/sims/nic/: rules.mk
src/sims/nic/e1000_bm/: e1000_gem5.cc  i8254xGBe.cc  i8254xGBe.h  i8254xGBe_defs.h  support.h
src/sims/nic/e1000_bm/gem5/: bitfield.cc  inet.cc  inet.h  ip.h  pktfifo.cc  pktfifo.h
src/sims/nic/e810_bm/: e810_adminq.cc  e810_base_wrapper.h  e810_bm.cc  e810_bm.h  e810_ceq.cc  e810_cqp.cc  e810_hmc.cc  e810_lan.cc  e810_ptp.cc  e810_ptp.h  e810_queues.cc  e810_switch.cc  headers.h  i40e_adminq.cc  i40e_bm  i40e_bm.cc  i40e_ceq.cc  i40e_cqp.cc  i40e_hmc.cc  i40e_lan.cc  i40e_queues.cc  logger.cc  rss.cc  rules.mk  util.h  xsums.cc
src/sims/nic/e810_bm/base/: defs.h  ice_adminq_cmd.h  ice_bitops.h  ice_defs.h  ice_devids.h  ice_lan_tx_rx.h  ice_osdep.h  ice_parser_rt.c  ice_rxtxq.h  ice_type.h  icrdma_hw.h
src/sims/nic/e810_bm/base_linux/: defs.h  hmc.h  ice_hw_autogen.h  ice_lan_tx_rx.h  ice_rxtxq.h
subprojects/: irq-rates.py
test/: .gitignore  README.md  autotest  autotest.cfg  autotest.py  loadlatency.py  measure_christina_river.cfg  server.py  tests.cfg
test/conf/: autotest_amy_wilfred.cfg  autotest_amy_wilfred_medium.cfg  autotest_example.cfg  autotest_florian_river.cfg  autotest_gierens_desktop.cfg  autotest_gierens_river.cfg  autotest_graham_jackson.cfg  autotest_graham_jackson_medium.cfg  autotest_multihost.cfg  autotest_okelmann_christina.cfg  autotest_okelmann_jackson.cfg  autotest_okelmann_rose.cfg  autotest_rose_river_okelmann.cfg  autotest_rose_wilfred.cfg  autotest_rose_wilfred_medium.cfg  autotest_rose_wilfred_okelmann.cfg  autotest_rose_wilfred_small.cfg  measure_christina_river.cfg  ptp_test.conf  ssh_config_doctor_cluster  ssh_config_localhost  test_vmux-emu.cfg  tests_example.cfg  tests_florian_river.cfg  tests_gierens_desktop.cfg  tests_gierens_estimate.cfg  tests_gierens_laptop.cfg  tests_gierens_river.cfg  tests_multihost.cfg  tests_passthrough_multihost.cfg  tests_quick_scalable_multihost.cfg  tests_scalable_multihost.cfg  vdpdk_sizes.cfg
test/dpdk-flow-bench/: Makefile  main.c  main.cpp
test/fastclick/: connect.click  dpdk-bounce.click  dpdk-flow-parser.click  dpdk-tap.click  mac-switch-hardware.click  mac-switch-software-tap.click  mac-switch-software.click  pktgen-l2.click  rteflow_etype_rules  test_dpdk_nic_rules
test/kni-latency/: kni-latency.cpp
test/moonprogs/: dpdk-config.lua  l2-load-latency.lua
test/ptptest/: Makefile  debug.sh  ptpclient.c
test/scripts/: create-guest-nat-rules.sh  delete-guest-nat-rules.sh  setup-admin-bridge.sh
test/src/: autotest.py  conf.py  cpupinning.py  enums.py  loadlatency.py  measure.py  measure_hotel.py  measure_iperf.py  measure_mediation.py  measure_next.py  measure_ptp.py  measure_strace.py  measure_vnf.py  measure_ycsb.py  ptp_test.py  reproduce.py  root.py  server.py  util.py
