sources += files(
  'main.cpp',
  'vfio-consumer.cpp',
  'caps.cpp',
  'runner.cpp',
  'util.cpp',
  'sims/nic/e810_bm/i40e_bm.cc',
  'sims/nic/e810_bm/logger.cc',
  'sims/nic/e810_bm/i40e_adminq.cc',
  'sims/nic/e810_bm/i40e_ceq.cc',
  'sims/nic/e810_bm/i40e_cqp.cc',
  'sims/nic/e810_bm/i40e_hmc.cc',
  'sims/nic/e810_bm/i40e_lan.cc',
  'sims/nic/e810_bm/i40e_queues.cc',
  'sims/nic/e810_bm/rss.cc',
  'sims/nic/e810_bm/xsums.cc',
  'sims/nic/e1000_bm/e1000_gem5.cc',
  'sims/nic/e1000_bm/i8254xGBe.cc',
  'sims/nic/e1000_bm/gem5/bitfield.cc',
  'sims/nic/e1000_bm/gem5/inet.cc',
  'sims/nic/e1000_bm/gem5/pktfifo.cc',
  'libsimbricks/simbricks/nicbm/nicbm.cc',
  'libsimbricks/simbricks/nicbm/multinic.cc',
  'libsimbricks/simbricks/nicif/nicif.c',
  'libsimbricks/simbricks/base/if.c',
  'libsimbricks/simbricks/network/if.c',
  'libsimbricks/simbricks/nicif/nicif.c',
  'libsimbricks/simbricks/pcie/if.c'
  )
