sources += files(
  'main.cpp',
  'caps.cpp',
  'runner.cpp',
  'util.cpp',
  'sims/nic/e810_bm/i40e_bm.cc',
  'sims/nic/e810_bm/logger.cc',
  'sims/nic/e810_bm/i40e_adminq.cc',
  'sims/nic/e810_bm/i40e_ceq.cc',
  'sims/nic/e810_bm/i40e_cqp.cc',
  'sims/nic/e810_bm/i40e_hmc.cc',
  'sims/nic/e810_bm/i40e_lan.cc',
  'sims/nic/e810_bm/i40e_queues.cc',
  'sims/nic/e810_bm/rss.cc',
  'sims/nic/e810_bm/xsums.cc',
  'libsimbricks/simbricks/nicbm/nicbm.cc',
  'libsimbricks/simbricks/nicbm/multinic.cc',
  'libsimbricks/simbricks/nicif/nicif.c',
  'libsimbricks/simbricks/base/if.c',
  'libsimbricks/simbricks/network/if.c',
  'libsimbricks/simbricks/nicif/nicif.c',
  'libsimbricks/simbricks/pcie/if.c'
  )
