sources += files(
    'main.cpp', 'util.cpp', 'caps.cpp', 'interrupts/global.cpp',
    'sims/nic/e810_bm/e810_bm.cc', 'sims/nic/e810_bm/logger.cc',
    'sims/nic/e810_bm/e810_adminq.cc', 'sims/nic/e810_bm/e810_ceq.cc',
    'sims/nic/e810_bm/e810_cqp.cc', 'sims/nic/e810_bm/e810_hmc.cc',
    'sims/nic/e810_bm/e810_lan.cc', 'sims/nic/e810_bm/e810_queues.cc',
    'sims/nic/e810_bm/rss.cc', 'sims/nic/e810_bm/xsums.cc',
    'libsimbricks/simbricks/nicbm/nicbm.cc',
    'libsimbricks/simbricks/nicbm/multinic.cc',
    'libsimbricks/simbricks/nicif/nicif.c', 'libsimbricks/simbricks/base/if.c',
    'libsimbricks/simbricks/network/if.c',
    'libsimbricks/simbricks/nicif/nicif.c', 'libsimbricks/simbricks/pcie/if.c')
